# np-crm

./: .env  .gitignore  build.sh  docker-compose.yml
backend/: Dockerfile  format-and-check.sh  package.json  pyproject.toml
backend/src/: config.js  index.js  main.py  server.js
backend/src/.chainlit/: config.toml
backend/src/copilot/: ask_db.py  main.py  tools.py
backend/src/forecast/: main.py
backend/src/forecast/api/models/: forecast.py  root.py
backend/src/forecast/api/routes/: forecast.py  health.py  root.py
backend/src/forecast/utils/: postprocess.py  preprocess.py
backend/src/gateway/: main.py
backend/src/gateway/api/models/: donations.py  forecasts.py  health.py  people.py  root.py  settings.py  users.py
backend/src/gateway/api/routes/: donations.py  forecasts.py  health.py  people.py  root.py  settings.py  users.py
backend/src/gateway/utils/: constants.py  dates.py  db.py  mappings.py
backend/src/models/: success.py  users.py
backend/src/routes/: donations.py  health.py  people.py  users.py
backend/src/utils/: db.py
copilot/: Dockerfile  requirements.txt
copilot/.chainlit/: config.toml
copilot/src/: copilot.py
copilot/src/prompts/: text_to_sql.py
db/: password.txt
db/init_db/data/: people.csv
db/init_db/sql/: init_1_functions.sql  init_2_tables.sql  init_3_data.sql  (+1 more)
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx
init_db/data/: donations.csv  people.csv  us-population-2010-2019-reshaped.csv
init_db/sql/: init_1_tables.sql  init_2_data.sql  init_3_views.sql
serveml/: Dockerfile  pyproject.toml  requirements.txt
serveml/src/: serve.py
(+1 files in other folders)
